--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ button{cursor: pointer; }
   width: 600px;
   margin: 60px 0 0 60px;
 }
+.dd-wrapper{ position: relative;}
 .dd-header{
   width: 320px;
   padding: 8px;
@@ -27,7 +28,7 @@ button{cursor: pointer; }
   clear: both;
   min-height: 23px;
 }
-.dd-list-wrapper{ width: 320px; }
+.dd-list-wrapper{ width: 320px; position: absolute;}
 .dd-arrow{
   width: 23px;
   border: 1px solid #333;
